Added new images

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(check_1.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/us.jpeg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -91,7 +91,7 @@
 							</div>
 							<h2>Stay tuned to the website for more updates and details.</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="rsvp_engage.html" class="btn btn-default btn-sm">Save the date</a></p>
+							<p><a href="index.html" class="btn btn-default btn-sm">Save the date</a></p>
 						</div>
 					</div>
 				</div>
@@ -111,7 +111,7 @@
 			<div class="couple-wrap animate-box">
 				<div class="couple-half">
 					<div class="groom">
-						<img src="images/groom.jpg" alt="groom" class="img-responsive">
+						<img src="images/Kamatchi.JPEG" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
 						<h3>Kamatchi</h3>
@@ -121,7 +121,7 @@
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
 				<div class="couple-half">
 					<div class="bride">
-						<img src="images/bride.jpg" alt="groom" class="img-responsive">
+						<img src="images/Katie.jpeg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
 						<h3>Kaitlin</h3>
