--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html">Wedding<strong>.</strong></a></div>
+					<div id="fh5co-logo"><a href="index.html"></a></div>
 					<br/>
 					<br/>
 					<br/>
@@ -100,6 +100,7 @@
 				</div>
 			</div>
 		</div>
+		<meta name="viewport" content="width=device-width, initial-scale=1" /> 
 	</header>
 
 	<div id="fh5co-couple">
