--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="about.html">Story</a></li>
-						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="index.html">Story</a></li>
+						<li><a href="index.html">Gallery</a></li>
+						<li><a href="index.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
