--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 						<li><a href="index.html">Story</a></li>
 						<li><a href="index.html">Gallery</a></li>
 						<li><a href="index.html">Contact</a></li>
+						<li><a href="registry.html">Registry</a></li>
 					</ul>
 				</div>
 			</div>
