Created hotels.html for hotel listings.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
 	<style>
 		.event-wrap {
 			position: relative;
+			margin: 10px 10px;
+			box-shadow: rgba(0, 0, 0, 0.24) 0px 9px 27px;
 			color: white;
-			padding: 40px 20px;
+			padding: 20px 20px;
 			border-radius: 10px;
 			overflow: hidden;
 			min-height: 250px; /* Adjust based on need */
@@ -145,14 +147,13 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Kaitlin &amp; Kamatchi</h1>
-							<h2>We Are Engaged</h2>
-							<h2>We Welcome you to celebrate the engagement with us!</h2>
+							<h2>We Welcome you to celebrate the marriage with us!</h2>
 							<div class="d-flex align-items-center justify-content-center">
-								<a class="btn btn-primary btn-primary-outline-0 py-3 px-5" href="rsvp_engage.html">Engagement RSVP Now</a>
+								<a class="btn btn-primary btn-primary-outline-0 py-3 px-5" href="rsvp_engage.html" style="margin-bottom: 20px;">Marriage RSVP Now</a>
 							</div>
 							<h2>Stay tuned to the website for more updates and details.</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="index.html" class="btn btn-default btn-sm">Save the date</a></p>
+							<p><a href="hotels.html" class="btn btn-default btn-sm">Book hotels nearby!</a></p>
 						</div>
 					</div>
 				</div>
@@ -209,11 +210,25 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap tying-knot animate-box">
-									<h3>Tying the Knot</h3>
+									<h3>Mehandhi</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
 										<span>1:00 PM</span>
 										<span>2:00 PM</span>
+									</div>
+									<div class="event-col">
+										<i class="icon-calendar"></i>
+										<span>April 09, 2026</span>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 col-sm-6 text-center">
+								<div class="event-wrap tying-knot animate-box">
+									<h3>Exchanging the Rings</h3>
+									<div class="event-col">
+										<i class="icon-clock"></i>
+										<span>4:00 PM</span>
+										<span>5:00 PM</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
@@ -348,16 +363,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="https://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="https://unsplash.co/" target="_blank">Unsplash</a></small>
-					</p>
-					<p>
-						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
+						<small class="block">&copy; 2026 K&K Wedding | Designed with Love</small> 
 					</p>
 				</div>
 			</div>
