--- a/rsvp_engage.html
+++ b/rsvp_engage.html
@@ -79,27 +79,11 @@
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">Story</a></li>
-						<li class="has-dropdown">
-							<a href="services.html">Services</a>
-							<ul class="dropdown">
-								<li><a href="#">Web Design</a></li>
-								<li><a href="#">eCommerce</a></li>
-								<li><a href="#">Branding</a></li>
-								<li><a href="#">API</a></li>
-							</ul>
-						</li>
-						<li class="has-dropdown active">
-							<a href="gallery.html">Gallery</a>
-							<ul class="dropdown">
-								<li><a href="#">HTML5</a></li>
-								<li><a href="#">CSS3</a></li>
-								<li><a href="#">Sass</a></li>
-								<li><a href="#">jQuery</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">Contact</a></li>
+						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="index.html">Story</a></li>
+						<li><a href="index.html">Gallery</a></li>
+						<li><a href="index.html">Contact</a></li>
+						<li><a href="registry.html">Registry</a></li>
 					</ul>
 				</div>
 			</div>
@@ -107,7 +91,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);">
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/us.jpeg);">
 		<div class="overlay"></div>
 		<div class="fh5co-container">
 			<div class="row">
@@ -115,7 +99,8 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>RSVP</h1>
-							<h2>Kindly respond by June 25, 2024 we look forward to celebrating with you! </h2>
+                            <h2>We Welcome You to Celebrate Our Wedding With Us! 💍 <br>Your presence means the world to us—let's make unforgettable memories together!</h2>
+							<h2>Kindly respond by Jan 30, 2026 we look forward to celebrating with you! </h2>
 						</div>
 					</div>
 				</div>
@@ -124,15 +109,10 @@
 	</header>
     
 <!-- RSVP Form Start -->
-        <div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
-            <div class="overlay"></div>
-            <div class="container">
+        <div id="fh5co-started">
+            <div class="container custom-card">
                 <div class="row animate-box">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-                    </div>
-                </div>
-                <div class="row animate-box">
-                    <div class="col-md-10 col-md-offset-1">
+                    <div class="col-md-10 col-md-offset-1" >
                         <form method="post" id="google-form" enctype="multipart/form-data" class="form-inline">
                             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="form-group">
@@ -155,7 +135,7 @@
                             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="form-group">
                                     <label for="Examplename" class="form-label text-dark">Enter Your Phone</label>
-                                    <input type="text" class="form-control py-3 border-0" id="Examplename" name="ContactNumber"  placeholder="Enter Your Phone" required>
+                                    <input type="text" class="form-control py-3 border-0 text-dark" id="Examplename" name="ContactNumber"  placeholder="Enter Your Phone" required>
                                   </div>
                             </div>
                             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
@@ -226,27 +206,18 @@
 
 
 <footer id="fh5co-footer" role="contentinfo">
-    <div class="container">
+		<div class="container">
 
-        <div class="row copyright">
-            <div class="col-md-12 text-center">
-                <p>
-                    <small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-                    <small class="block">Designed by <a href="https://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="https://unsplash.co/" target="_blank">Unsplash</a></small>
-                </p>
-                <p>
-                    <ul class="fh5co-social-icons">
-                        <li><a href="#"><i class="icon-twitter"></i></a></li>
-                        <li><a href="#"><i class="icon-facebook"></i></a></li>
-                        <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                        <li><a href="#"><i class="icon-dribbble"></i></a></li>
-                    </ul>
-                </p>
-            </div>
-        </div>
+			<div class="row copyright">
+				<div class="col-md-12 text-center">
+					<p>
+						<small class="block">&copy; 2026 K&K Wedding | Designed with Love</small> 
+					</p>
+				</div>
+			</div>
 
-    </div>
-</footer>
+		</div>
+	</footer>
 </div>
 
 <div class="gototop js-top">
