--- a/hotels.html
+++ b/hotels.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hotels</title>
-    <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+	<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>K&K Wedding</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
+	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
+	<meta name="author" content="FREEHTML5.CO" />
+
+  	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content=""/>
+	<meta property="og:image" content=""/>
+	<meta property="og:url" content=""/>
+	<meta property="og:site_name" content=""/>
+	<meta property="og:description" content=""/>
+	<meta name="twitter:title" content="" />
+	<meta name="twitter:image" content="" />
+	<meta name="twitter:url" content="" />
+	<meta name="twitter:card" content="" />
+
+	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	
 	<!-- Animate.css -->
@@ -26,16 +45,20 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
+	<!-- FOR IE9 below -->
+	<!--[if lt IE 9]>
+	<script src="js/respond.min.js"></script>
+	<![endif]-->
+
+	</head>
     <style>
         .hotels-title {
-            font-family: 'Sacramento', cursive;
             font-size: rem;
             font-size: 8rem;
             color: #333;
             margin-top: 50px;
         }
         .hotels-subtitle {
-            font-family: 'Work Sans', sans-serif;
             font-size: 2.8rem;
             letter-spacing: -2px;
             color: #666;
@@ -111,7 +134,6 @@
             box-shadow: 0 8px 32px rgba(44, 62, 80, 0.15);
         }
         .card-heading {
-            font-family: 'Work Sans', sans-serif;
             font-size: 2.6rem;
             font-weight: 700;
             color: #512e5f;
@@ -127,7 +149,6 @@
             box-shadow: 0 2px 12px rgba(44, 62, 80, 0.07);
         }
         .card-address {
-            font-family: 'Work Sans', sans-serif;
             font-size: 2rem;
             color: #444;
             margin-bottom: 1.2rem;
@@ -142,7 +163,6 @@
             background: #8e44ad;
             color: #fff;
             font-size: 1.5rem;
-            font-family: 'Work Sans', sans-serif;
             padding: 0.6em 1.8em;
             border: none;
             border-radius: 2em;
@@ -176,20 +196,50 @@
             }
         }
     </style>
-</head>
-<body>
-    <div class="container">
-        <div class="d-flex justify-content-center my-5">
-            <a href="index.html" class="go-home-btn">
-                <span class="arrow">&#8592;</span> Go Home
-            </a>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h1 class="hotels-title">Hotels</h1>
-                <p class="hotels-subtitle">Welcome to our hotels page! Here you can find a variety of accommodations to suit your needs.</p>
-            </div>
-        </div>
+	<body>
+		
+	<div class="fh5co-loader"></div>
+	
+	<div id="page">
+	<nav class="fh5co-nav" role="navigation">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-2">
+					<div id="fh5co-logo"><a href="index.html">Wedding</a></div>
+				</div>
+				<div class="col-xs-10 text-right menu-1">
+					<ul>
+						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="index.html">Story</a></li>
+						<li><a href="index.html">Gallery</a></li>
+						<li><a href="index.html">Contact</a></li>
+						<li><a href="registry.html">Registry</a></li>
+					</ul>
+				</div>
+			</div>
+			
+		</div>
+	</nav>
+
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/us.jpeg);">
+		<div class="overlay"></div>
+		<div class="fh5co-container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center">
+					<div class="display-t">
+						<div class="display-tc animate-box" data-animate-effect="fadeIn">
+							<h1>Hotels</h1>
+                            <h2><b>We can't wait to celebrate this special day with you!</b></h2>
+                            <h2>To make your visit as comfortable as possible, we’ve reserved rooms at nearby hotels. We recommend booking early—these rooms won’t last long, and we’d love for everyone to stay close and keep the good times going all weekend!</h2>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+
+    <div class="container custom-container">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12">
                 <div class="custom-card">
@@ -225,7 +275,8 @@
             </div>
         </div>
     </div>
-    <footer id="fh5co-footer" role="contentinfo">
+
+<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
 
 			<div class="row copyright">
@@ -238,5 +289,34 @@
 
 		</div>
 	</footer>
+</div>
+
+<div class="gototop js-top">
+    <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+</div>
+
+<!-- jQuery -->
+<script src="js/jquery.min.js"></script>
+<!-- jQuery Easing -->
+<script src="js/jquery.easing.1.3.js"></script>
+<!-- Bootstrap -->
+<script src="js/bootstrap.min.js"></script>
+<!-- Waypoints -->
+<script src="js/jquery.waypoints.min.js"></script>
+<!-- Carousel -->
+<script src="js/owl.carousel.min.js"></script>
+<!-- countTo -->
+<script src="js/jquery.countTo.js"></script>
+
+<!-- Stellar -->
+<script src="js/jquery.stellar.min.js"></script>
+<!-- Magnific Popup -->
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/magnific-popup-options.js"></script>
+
+<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script> -->
+<script src="js/simplyCountdown.js"></script>
+<!-- Main -->
+<script src="js/main.js"></script>
 </body>
 </html>
