Major Updates - Added accomodations button on Navigation Bar - Changed "Book Hotels Nearby!" to "Book Accomodations" - Changed title and placeholder for adding guests and message to couple.

--- a/hotels.html
+++ b/hotels.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>K&K Wedding</title>
+	<title>Wedding - K&K</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -210,7 +210,8 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="index.html">Story</a></li>
+						<li><a href="hotels.html">Accomodations</a></li>
+                        <li><a href="index.html">Story</a></li>
 						<li><a href="index.html">Gallery</a></li>
 						<li><a href="index.html">Contact</a></li>
 						<li><a href="registry.html">Registry</a></li>
