--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="hotels.html">Accomodations</a></li>
 						<li><a href="index.html">Story</a></li>
 						<li><a href="index.html">Gallery</a></li>
 						<li><a href="index.html">Contact</a></li>
@@ -153,7 +154,7 @@
 							</div>
 							<h2>Stay tuned to the website for more updates and details.</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="hotels.html" class="btn btn-default btn-sm">Book hotels nearby!</a></p>
+							<p><a href="hotels.html" class="btn btn-default btn-sm">Book Accomodations</a></p>
 						</div>
 					</div>
 				</div>
