--- a/rsvp_engage.html
+++ b/rsvp_engage.html
@@ -7,25 +7,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Wedding &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Wedding - K&K</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
-
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		https://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		https://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -75,11 +61,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html">Wedding<strong>.</strong></a></div>
+					<div id="fh5co-logo"><a href="index.html">Wedding</a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="hotels.html">Accomodations</a></li>
 						<li><a href="index.html">Story</a></li>
 						<li><a href="index.html">Gallery</a></li>
 						<li><a href="index.html">Contact</a></li>
@@ -154,8 +141,8 @@
                             </div>
                             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="form-group">
-                                    <label for="exampletextarea" class="form-label text-dark">Message</label>
-                                    <textarea name="Message" class="form-control border-0" id="exampletextarea" cols="30" rows="5"placeholder="Message"></textarea>
+                                    <label for="exampletextarea" class="form-label text-dark">Full name of the guests and Message to the couple</label>
+                                    <textarea name="Message" class="form-control border-0" id="exampletextarea" cols="30" rows="5"placeholder="1. Full Name&#10;2. Full Name&#10;Message"></textarea>
                                 </div>
                             </div>
                             <div class="col-12 wow fadeIn" data-wow-delay="0.1s">
