--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
 		}
 	
 		/* Specific Backgrounds for Each Event */
+		.mehandhi::before {
+			background-image: url('mehandhi.png');
+		}
+		
 		.tying-knot::before {
 			background-image: url('temple.jpg');
 		}
@@ -210,7 +214,7 @@
 					<div class="display-tc">
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
-								<div class="event-wrap tying-knot animate-box">
+								<div class="event-wrap mehandhi animate-box">
 									<h3>Mehandhi</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
@@ -274,7 +278,7 @@
 	
 	<div id="fh5co-couple-story">
 		<div class="container">
-			<div class="row">
+			<div class="row" style="margin-top: 100px;">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<span>We Love Each Other</span>
 					<h2>Our Story</h2>
