Changed button title for Registry

--- a/registry.html
+++ b/registry.html
@@ -86,7 +86,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Registry</h1>
                             <h2>Your presence at our wedding is the greatest gift we could ask for. We feel incredibly lucky to celebrate this special moment with you. If you'd like to share in our joy with a gift, we've curated a registry of things we love. Your kindness and support mean the world to us!</h2>
-                            <a class="btn btn-primary btn-primary-outline-0 py-3 px-5" href="https://registry.theknot.com/-april-2026-ca/70187649" style="margin-bottom: 20px;" target="_blank">Marriage Visit Our Registry</a>
+                            <a class="btn btn-primary btn-primary-outline-0 py-3 px-5" href="https://registry.theknot.com/-april-2026-ca/70187649" style="margin-bottom: 20px;" target="_blank">Visit our Registry</a>
 
 						</div>
 					</div>
