--- a/rsvp_engage.html
+++ b/rsvp_engage.html
@@ -129,7 +129,7 @@
                                 <div class="form-group">
                                     <label for="exampleselect" class="form-label text-dark">Number Of Guests
                                     </label>
-                                    <select class="form-control bg-white text-dark py-3 border-0" id="exampleselect"  name="NumberofGuests"  placeholder="Number Of Guests" required>
+                                    <select class="form-control py-3 border-0 custom-dropdown" id="exampleselect"  name="NumberofGuests"  placeholder="Number Of Guests" required>
                                       <option id ="1" value="1">01 (Only Me) </option>
                                       <option id ="2" value="2">02</option>
                                       <option id ="3" value="3">03</option>
