--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	
 		/* Specific Backgrounds for Each Event */
 		.mehandhi::before {
-			background-image: url('mehandhi.png');
+			background-image: url('mehandhi.jpg');
 		}
 		
 		.tying-knot::before {
@@ -215,11 +215,11 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap mehandhi animate-box">
-									<h3>Mehandhi</h3>
+									<h3>Mehendi</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>1:00 PM</span>
-										<span>2:00 PM</span>
+										<span>12:00 PM</span>
+										<span>3:00 PM</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
@@ -265,7 +265,7 @@
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>March 15, 2025</span>
+										<span>April 11, 2026</span>
 									</div>
 								</div>
 							</div>
