update the time

--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap tying-knot animate-box">
-									<h3>Exchanging the Rings</h3>
+									<h3>Tying the Knot</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>4:00 PM</span>
-										<span>5:00 PM</span>
+										<span>1:00 PM</span>
+										<span>2:00 PM</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
