update the rsvp

--- a/rsvp_engage.html
+++ b/rsvp_engage.html
@@ -141,6 +141,18 @@
                             </div>
                             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="form-group">
+                                    <label for="exampleselect" class="form-label text-dark">Will you be able to attend both ceremonies?
+                                    </label>
+                                    <select class="form-control py-3 border-0 custom-dropdown" id="exampleselect"  name="ceremonies"  placeholder="Ceremonies" required>
+                                        <option value="" disabled selected>Choose your adventure</option>
+                                        <option value="both">Heck yes! I’m here for the full cultural experience (and snacks).</option>
+                                        <option value="indian_only">Only the Indian ceremony — bring on the colors and curry!</option>
+                                        <option value="american_only">Just the American one — I vibe with vows and cake.</option>                                  
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                                <div class="form-group">
                                     <label for="exampletextarea" class="form-label text-dark">Full name of the guests and Message to the couple</label>
                                     <textarea name="Message" class="form-control border-0" id="exampletextarea" cols="30" rows="5"placeholder="1. Full Name&#10;2. Full Name&#10;Message"></textarea>
                                 </div>
