--- a/index.html
+++ b/index.html
@@ -345,6 +345,82 @@
 					</ul>		
 				</div>
 			</div>
+			<div class="container custom-container">
+				<div class="row">
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/1.jpg" alt="Our Photo 1" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/2.jpg" alt="Our Photo 2" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/3.jpg" alt="Our Photo 3" class="custom-image">
+					</div>
+				</div>
+				<div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/4.jpg" alt="Our Photo 4" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/5.jpg" alt="Our Photo 5" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/6.jpeg" alt="Our Photo 6" class="custom-image">
+					</div>
+				</div>
+				<div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/7.jpeg" alt="Our Photo 7" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/8.jpeg" alt="Our Photo 8" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/9.jpeg" alt="Our Photo 9" class="custom-image">
+					</div>
+				</div>
+				<div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/10.jpeg" alt="Our Photo 10" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/11.jpeg" alt="Our Photo 11" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/12.jpeg" alt="Our Photo 12" class="custom-image">
+					</div>
+				</div>
+				<div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/13.jpeg" alt="Our Photo 13" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/14.jpeg" alt="Our Photo 14" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/15.jpeg" alt="Our Photo 15" class="custom-image">
+					</div>
+				</div>
+				<div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/16.jpeg" alt="Our Photo 16" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/17.jpeg" alt="Our Photo 17" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/18.jpeg" alt="Our Photo 18" class="custom-image">
+					</div>
+				</div>
+				<div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/19.jpeg" alt="Our Photo 19" class="custom-image">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<img src="images/20.jpeg" alt="Our Photo 20" class="custom-image">
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
