updated contact page

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						<li><a href="hotels.html">Accomodations</a></li>
 						<li><a href="index.html">Story</a></li>
 						<li><a href="index.html">Gallery</a></li>
-						<li><a href="index.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 						<li><a href="registry.html">Registry</a></li>
 					</ul>
 				</div>
@@ -155,9 +155,9 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Kaitlin &amp; Kamatchi</h1>
-							<h2>We Welcome you to celebrate the marriage with us!</h2>
+							<h2>We welcome you to celebrate the marriage with us!</h2>
 							<div class="d-flex align-items-center justify-content-center">
-								<a class="btn btn-primary btn-primary-outline-0 py-3 px-5" href="rsvp_engage.html" style="margin-bottom: 20px;">Marriage RSVP Now</a>
+								<a class="btn btn-primary btn-primary-outline-0 py-3 px-5" href="rsvp_engage.html" style="margin-bottom: 20px;">RSVP here</a>
 							</div>
 							<h2>Stay tuned to the website for more updates and details.</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
@@ -218,11 +218,11 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap mehandhi animate-box">
-									<h3>Mehandhi</h3>
+									<h3>Haldi and Mehendi</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>1:00 PM</span>
-										<span>2:00 PM</span>
+										<span>11:00 AM</span>
+										<span>7:00 PM</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
@@ -235,8 +235,8 @@
 									<h3>Tying the Knot</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>1:00 PM</span>
-										<span>2:00 PM</span>
+										<span>12:30 PM</span>
+										<span>2:30 PM</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
@@ -249,8 +249,8 @@
 									<h3>Exchanging the Rings</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>4:00 PM</span>
 										<span>5:00 PM</span>
+										<span>6:00 PM</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
@@ -263,12 +263,12 @@
 									<h3>Party Time</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>5:00 PM</span>
-										<span>6:00 AM</span>
+										<span>6:00 PM</span>
+										<span>Onwards</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>March 15, 2025</span>
+										<span>April 11, 2026</span>
 									</div>
 								</div>
 							</div>
