--- a/registry.html
+++ b/registry.html
@@ -68,7 +68,7 @@
 						<li><a href="hotels.html">Accomodations</a></li>
 						<li><a href="index.html">Story</a></li>
 						<li><a href="index.html">Gallery</a></li>
-						<li><a href="index.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 						<li><a href="registry.html">Registry</a></li>
 					</ul>
 				</div>
