updated timeline in index page

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="rsvp_engage.html">RSVP</a></li>
 						<li><a href="hotels.html">Accomodations</a></li>
 						<li><a href="index.html">Story</a></li>
 						<li><a href="index.html">Gallery</a></li>
@@ -227,6 +228,9 @@
 									<div class="event-col">
 										<i class="icon-calendar"></i>
 										<span>April 09, 2026</span>
+										<br>
+										<br>
+										<span>Linden, CA</span>
 									</div>
 								</div>
 							</div>
@@ -241,6 +245,7 @@
 									<div class="event-col">
 										<i class="icon-calendar"></i>
 										<span>April 11, 2026</span>
+										<span>24590 Main St, Foresthill, CA 95631, United States</span>
 									</div>
 								</div>
 							</div>
@@ -255,6 +260,7 @@
 									<div class="event-col">
 										<i class="icon-calendar"></i>
 										<span>April 11, 2026</span>
+										<span>24590 Main St, Foresthill, CA 95631, United States</span>
 									</div>
 								</div>
 							</div>
@@ -269,6 +275,7 @@
 									<div class="event-col">
 										<i class="icon-calendar"></i>
 										<span>April 11, 2026</span>
+										<span>24590 Main St, Foresthill, CA 95631, United States</span>
 									</div>
 								</div>
 							</div>
@@ -281,7 +288,7 @@
 	
 	<div id="fh5co-couple-story">
 		<div class="container">
-			<div class="row" style="margin-top: 100px;">
+			<div class="row" style="margin-top: 250px;">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<span>We Love Each Other</span>
 					<h2>Our Story</h2>
@@ -299,7 +306,7 @@
 									<span class="date">June 26th, 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p></p>
+									<p>Our journey started online. Kaitlin was in Santa Cruz, enjoying a little vacation, and Kamatchi was in Sunnyvale, trying to figure out where Chico even was! That first conversation was full of curiosity, laughter, and an undeniable spark. From questions about hometowns to shared stories, we quickly realized there was something special between us.</p>
 								</div>
 							</div>
 						</li>
@@ -307,11 +314,11 @@
 							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">First Date</h3>
-									<span class="date">July 4th, 2023</span>
+									<h3 class="timeline-title">Our First Date <br>Van Gogh Immersive Experience</h3>
+									<span class="date">September 4th, 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p></p>
+									<p>One of our most unforgettable experiences together was exploring the Van Gogh Immersive Exhibit. Walking through the swirling, colorful worlds of his masterpieces felt magical—just like our journey. It was a reminder that love, like art, is full of color, wonder, and moments that take your breath away.</p>
 								</div>
 							</div>
 						</li>
@@ -323,13 +330,76 @@
 									<span class="date">August 20, 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p></p>
+									<p>By late summer, it was clear our connection was real. We officially became a couple, and the months that followed were filled with adventures and explorations. Together, we traveled near and far—wandering the streets of LA, discovering the vibrant vibes of Seattle, enjoying the charm of Boston and New York, and soaking in the natural beauty of Oregon. Every trip brought new experiences, shared laughs, and memories that made our bond even stronger.</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Moving in together</h3>
+									<span class="date">September 2024</span>
+								</div>
+								<div class="timeline-body">
+									<p>A year later, we took another big step—creating a home together. Living under one roof has made every day brighter, full of laughter, warmth, and tiny memories that remind us we’re meant to be.</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Making it International <br>Finland, Amsterdam and Tallinn</h3>
+									<span class="date">October 7th, 2024</span>
+								</div>
+								<div class="timeline-body">
+									<p>In October, we took our first official international trip together, exploring Finland, Amsterdam, and Tallinn. From scenic streets and cozy cafés to breathtaking landscapes, every moment was unforgettable. A highlight of the trip was revisiting the Van Gogh Museum—seeing his timeless masterpieces again felt even more special when shared together.</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Engaged</h3>
+									<span class="date">December 2024</span>
+								</div>
+								<div class="timeline-body">
+									<p>We took the next big step in our journey and got engaged! It was a magical moment filled with love, excitement, and the joyful realization that we’d be spending the rest of our lives together.</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Engagement Party</h3>
+									<span class="date">April 5th 2025</span>
+								</div>
+								<div class="timeline-body">
+									<p>We celebrated our love with family and friends at our engagement party in April. Surrounded by laughter, cheers, and happy tears, it was a perfect prelude to our wedding day and a reminder of how lucky we are to have such wonderful people in our lives.</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Our Furry Family Members</h3>
+									<span class="date">April 28th, 2025</span>
+								</div>
+								<div class="timeline-body">
+									<p>Katie’s birthday brought the sweetest surprise when we welcomed a puppy, Mucca, into our family! Our little bundle of energy has filled our home with love, laughter, and endless wagging tails. Of course, he wasn’t starting from scratch—our cat, Yeti, quickly claimed the role of “older sibling.”
+
+									Like any siblings, Yeti and Mucca have their fair share of playful squabbles and dramatic standoffs, but when the day winds down, they’re the best of friends. Together, they’ve made our home warmer, our lives fuller, and our journey even more special.</p>
 								</div>
 							</div>
 						</li>
 			    	</ul>
 				</div>
 			</div>
+			<p style="text-align: center; font-size: 2rem;">Now, after surviving long-distance drives, international trips, and sibling squabbles between Yeti and Mucca, we figure marriage will be a piece of cake. Speaking of cake… <b>we’ll see you on our wedding day!</b></p>
 		</div>
 	</div>
 
