--- a/rsvp_engage.html
+++ b/rsvp_engage.html
@@ -66,6 +66,7 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="rsvp_engage.html">RSVP</a></li>
                         <li><a href="hotels.html">Accomodations</a></li>
 						<li><a href="index.html">Story</a></li>
 						<li><a href="index.html">Gallery</a></li>
