--- a/hotels.html
+++ b/hotels.html
@@ -271,7 +271,7 @@
                         <p><b>Address: </b>13535 Bowman Rd, Auburn, CA 95603</p>
                     </div>
                     <div class="card-button-book">
-                        <a href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1746727361893&key=GRP&guestreslink2=true&app=resvlink" target="_blank">Book Now</a>
+                        <a href="https://app.marriott.com/reslink?id=1746727361893&key=GRP&app=resvlink" target="_blank">Book Now</a>
                     </div>
                 </div>
             </div>
