updated a few spellings

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 									<span class="date">September 4th, 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>One of our most unforgettable experiences together was exploring the Van Gogh Immersive Exhibit. Walking through the swirling, colorful worlds of his masterpieces felt magical—just like our journey. It was a reminder that love, like art, is full of color, wonder, and moments that take your breath away.</p>
+									<p>One of our most unforgettable experiences together was exploring the Van Gogh Immersive Exhibit. Walking through the swirling, colorful worlds of his masterpieces felt magical, just like our journey. It was a reminder that love, like art, is full of color, wonder, and moments that take your breath away.</p>
 								</div>
 							</div>
 						</li>
@@ -333,7 +333,7 @@
 									<span class="date">August 20, 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>By late summer, it was clear our connection was real. We officially became a couple, and the months that followed were filled with adventures and explorations. Together, we traveled near and far—wandering the streets of LA, discovering the vibrant vibes of Seattle, enjoying the charm of Boston and New York, and soaking in the natural beauty of Oregon. Every trip brought new experiences, shared laughs, and memories that made our bond even stronger.</p>
+									<p>By late summer, it was clear our connection was real. We officially became a couple, and the months that followed were filled with adventures and explorations. Together, we traveled near and far, wandering the streets of LA, discovering the vibrant vibes of Seattle, enjoying the charm of Boston and New York, and soaking in the natural beauty of Oregon. Every trip brought new experiences, shared laughs, and memories that made our bond even stronger.</p>
 								</div>
 							</div>
 						</li>
@@ -345,7 +345,7 @@
 									<span class="date">September 2024</span>
 								</div>
 								<div class="timeline-body">
-									<p>A year later, we took another big step—creating a home together. Living under one roof has made every day brighter, full of laughter, warmth, and tiny memories that remind us we’re meant to be.</p>
+									<p>A year later, we took another big step: creating a home together. Living under one roof has made every day brighter, full of laughter, warmth, and tiny memories that remind us we’re meant to be.</p>
 								</div>
 							</div>
 						</li>
@@ -357,7 +357,7 @@
 									<span class="date">October 7th, 2024</span>
 								</div>
 								<div class="timeline-body">
-									<p>In October, we took our first official international trip together, exploring Finland, Amsterdam, and Tallinn. From scenic streets and cozy cafés to breathtaking landscapes, every moment was unforgettable. A highlight of the trip was revisiting the Van Gogh Museum—seeing his timeless masterpieces again felt even more special when shared together.</p>
+									<p>In October, we took our first official international trip together, exploring Finland, Amsterdam, and Tallinn. From scenic streets and cozy cafés to breathtaking landscapes, every moment was unforgettable. A highlight of the trip was revisiting the Van Gogh Museum, seeing his timeless masterpieces again felt even more special when shared together.</p>
 								</div>
 							</div>
 						</li>
@@ -393,7 +393,7 @@
 									<span class="date">April 28th, 2025</span>
 								</div>
 								<div class="timeline-body">
-									<p>Katie’s birthday brought the sweetest surprise when we welcomed a puppy, Mucca, into our family! Our little bundle of energy has filled our home with love, laughter, and endless wagging tails. Of course, he wasn’t starting from scratch—our cat, Yeti, quickly claimed the role of “older sibling.”
+									<p>Katie’s birthday brought the sweetest surprise when we welcomed a puppy, Mucca, into our family! Our little bundle of energy has filled our home with love, laughter, and endless wagging tails. Of course, he wasn’t starting from scratch, our cat, Yeti, quickly claimed the role of “older sibling.”
 
 									Like any siblings, Yeti and Mucca have their fair share of playful squabbles and dramatic standoffs, but when the day winds down, they’re the best of friends. Together, they’ve made our home warmer, our lives fuller, and our journey even more special.</p>
 								</div>
