--- a/rsvp_engage.html
+++ b/rsvp_engage.html
@@ -87,7 +87,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>RSVP</h1>
-                            <h2>We Welcome You to Celebrate Our Wedding With Us! 💍 <br>Your presence means the world to us—let's make unforgettable memories together!</h2>
+                            <h2>We Welcome You to Celebrate Our Wedding With Us! 💍 <br>Your presence means the world to us, let's make unforgettable memories together!</h2>
 							<h2>Kindly respond by Jan 30, 2026 we look forward to celebrating with you! </h2>
 						</div>
 					</div>
@@ -147,8 +147,8 @@
                                     <select class="form-control py-3 border-0 custom-dropdown" id="exampleselect"  name="ceremonies"  placeholder="Ceremonies" required>
                                         <option value="" disabled selected>Choose your adventure</option>
                                         <option value="both">Heck yes! I’m here for the full cultural experience (and snacks).</option>
-                                        <option value="indian_only">Only the Indian ceremony — bring on the colors and curry!</option>
-                                        <option value="american_only">Just the American one — I vibe with vows and cake.</option>                                  
+                                        <option value="indian_only">Only the Indian ceremony - bring on the colors and curry!</option>
+                                        <option value="american_only">Just the American one - I vibe with vows and cake.</option>                                  
                                     </select>
                                 </div>
                             </div>
